# deepdogdocker

./: .dockerignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  flake.nix  justfile
scripts/: release.sh
src/: pyproject.toml
