[tool.poetry]
name = "deepdogdocker"
version = "0.1.0"
description = ""
authors = ["Deepak Mallubhotla <dmallubhotla+github@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pdme = "^0.8.7"
# deepdog = {path  = "../deepdog", develop = true}
deepdog = "^0.6.4"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
